[package]
name = "diff"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["derive"] }
colored = "3.0.0"
diff-match-patch-rs = "0.4.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"

[lints.clippy]
pedantic = "warn"
